--- a/tubiao1.html
+++ b/tubiao1.html
@@ -10,7 +10,7 @@
         <script src="https://img.hcharts.cn/highcharts-plugins/highcharts-zh_CN.js"></script>
     </head>
     <body>
-        <div id="container" style="min-width:400px"></div>
+        <div id="container" style="height=400px"></div>
         <script>
             var chart = Highcharts.chart('container', {
 	chart: {
