--- a/tubiao1.html
+++ b/tubiao1.html
@@ -42,7 +42,7 @@
 	}, { // Secondary yAxis
 		gridLineWidth: 0,
 		title: {
-			text: '指令实际下单',
+			text: '',
 			style: {
 				color: Highcharts.getOptions().colors[0]
 			}
