--- a/tubiao2.html
+++ b/tubiao2.html
@@ -103,6 +103,6 @@
 	}]
 }); 
         </script>
-	<div class="text" style="text-align:center">第十周</div>
+	<div class="text" style="text-align:center">第10周</div>
     </body>
 </html>
