--- a/tubiao1.html
+++ b/tubiao1.html
@@ -19,6 +19,9 @@
 	title: {
 		text: '2021年周配置指令下单计划与完成汇总'
 	},
+	credits: {
+		enabled:false,
+	},
 	xAxis: [{
 		categories: [
 			'3/1', '3/2', '3/3', '3/4', '3/5', '3/6','3/7'
