--- a/tubiao2.html
+++ b/tubiao2.html
@@ -18,6 +18,9 @@
 	title: {
 		text: '2021年周配置指令执行计划与完成汇总'
 	},
+	credits: {
+		enabled:false,
+	},
 	xAxis: [{
 		categories: [
 			'3/1', '3/2', '3/3', '3/4', '3/5', '3/6','3/7'
